--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../top.css">
+    <link rel="stylesheet" href="../about.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>HOME</h1>
+    <h1>About me</h1>
 </body>
 </html>
