--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    <header></header>
+    <nav>
+    <ul>
+        <li>HOME</li>
+        <li><a href="./about">About</a></li>
+        <li></li>
+        <li></li>
+        <li><a href="./contact">Contact</a></li>
+    </ul>
+    </nav>
     <h1>HOME</h1>
 </body>
 </html>
