--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li>HOME</li>
         <li><a href="./about">About</a></li>
-        <li></li>
+        <li><a href="./main">Main</a></li>
         <li></li>
         <li><a href="./contact">Contact</a></li>
     </ul>
