--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>HOME</li>
         <li><a href="./about">About</a></li>
         <li><a href="./main">Main</a></li>
-        <li><a href=""></a></li>
+        <li><a href="">Like</a></li>
         <li><a href="./contact">Contact</a></li>
     </ul>
     </nav>
