--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav>
     <ul>
         <li>HOME</li>
-        <li><a href="./about">About</a></li>
-        <li><a href="./main">Main</a></li>
-        <li><a href="./Light Novel">Light Novel</a></li>
-        <li><a href="./contact">Contact</a></li>
+        <li><a href="./about/index.html">About</a></li>
+        <li><a href="./main/index.html">Main</a></li>
+        <li><a href="./Light Novel/index.html">Light Novel</a></li>
+        <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
     <h1>HOME</h1>
