--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>HOME</li>
         <li><a href="./about/index.html">About</a></li>
         <li><a href="./main/index.html">Main</a></li>
-        <li><a href="./Light Novel/index.html">Light Novel</a></li>
+        <li><a href="./Light/index.html">Light</a></li>
         <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
