--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
-    <h1>HOME</h1>
+    <main>
+        <h1>HOME</h1>
+    </main>
+    <footer></footer>
 </body>
 </html>
