--- a/about/index.html
+++ b/about/index.html
@@ -8,8 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>About me</h1>
-    <h2>name</h2>
-    
+    <header>
+        <h1>About me</h1>
+    </header>
+    <main>
+        <h1>name</h1>
+    </main>
+    <footer></footer>
 </body>
 </html>
