--- a/about/index.html
+++ b/about/index.html
@@ -11,8 +11,22 @@
     <header>
         <h1>About me</h1>
     </header>
+    <nav>
+    <ul>
+        <li><a href="./about-me/index.html">Home</a></li>
+        <li>About</li>
+        <li><a href="./main/index.html">Main</a></li>
+        <li><a href="./Light/index.html">Light</a></li>
+        <li><a href="./contact/index.html">Contact</a></li>
+    </ul>
+    </nav>
     <main>
-        <h1>name</h1>
+        <section>
+            <h2>name</h2>
+        </section>
+        <section>
+            <h2>syumi</h2>
+        </section>
     </main>
     <footer></footer>
 </body>
