--- a/main/index.html
+++ b/main/index.html
@@ -8,6 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header></header>
+    <nav>
+    <ul>
+        <li><a href="./about-me/index.html">Home</a></li>
+        <li><a href="./about/index.html">About</a></li>
+        <li>Main</li>
+        <li><a href="./Light/index.html">Light</a></li>
+        <li><a href="./contact/index.html">Contact</a></li>
+    </ul>
+    </nav>
+    <main>
+        <h1>HOME</h1>
+    </main>
+    <footer></footer>
 </body>
 </html>
