--- a/Light/index.html
+++ b/Light/index.html
@@ -8,7 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Light Novel</h1>
-    <script src="./light.css"></script>
+    <header></header>
+    <nav>
+    <ul>
+        <li><a href="./about-me/index.html">Home</a></li>
+        <li><a href="./about/index.html">About</a></li>
+        <li><a href="./main/index.html">Main</a></li>
+        <li>Light</li>
+        <li><a href="./contact/index.html">Contact</a></li>
+    </ul>
+    </nav>
+    <main>
+        <h1>HOME</h1>
+    </main>
+    <footer></footer>
 </body>
 </html>
