--- a/contact/index.html
+++ b/contact/index.html
@@ -8,6 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Contact</h1>
+    <header></header>
+    <nav>
+    <ul>
+        <li><a href="./about-me/index.html">Home</a></li>
+        <li><a href="./about/index.html">About</a></li>
+        <li><a href="./main/index.html">Main</a></li>
+        <li><a href="./Light/index.html">Light</a></li>
+        <li>Contact</li>
+    </ul>
+    </nav>
+    <main>
+        <h1>HOME</h1>
+    </main>
+    <footer></footer>
 </body>
 </html>
