--- a/about/index.html
+++ b/about/index.html
@@ -26,6 +26,13 @@
         </section>
         <section>
             <h2>syumi</h2>
+            <ul>
+                <li>読書</li>
+                <li>アニメ視聴</li>
+                <li>音楽鑑賞</li>
+                <li>ゲームプレイ</li>
+                <li>Youtube視聴</li>
+            </ul>
         </section>
     </main>
     <footer></footer>
