--- a/about/index.html
+++ b/about/index.html
@@ -26,13 +26,31 @@
         </section>
         <section>
             <h2>syumi</h2>
-            <ul>
-                <li>読書</li>
-                <li>アニメ視聴</li>
-                <li>音楽鑑賞</li>
-                <li>ゲームプレイ</li>
-                <li>Youtube視聴</li>
-            </ul>
+            <table>
+            <thead>
+                <tr>
+                    <th>趣味</th>
+                    <th>内容</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>読書</th>
+                    <th>アニメ視聴</th>
+                    <th>音楽鑑賞</th>
+                    <th>ゲームプレイ</th>
+                    <th>Youtube視聴</th>
+                </tr>
+                <tr>
+                    <th>
+                        <ul>
+                            <li>ライトノベル/小説</li>
+                            <li>漫画</li>
+                        </ul>
+                    </th>
+                </tr>
+            </tbody>
+            </table>
         </section>
     </main>
     <footer></footer>
