--- a/about/index.html
+++ b/about/index.html
@@ -42,12 +42,30 @@
                     <th>Youtube視聴</th>
                 </tr>
                 <tr>
-                    <th>
-                        <ul>
-                            <li>ライトノベル/小説</li>
-                            <li>漫画</li>
-                        </ul>
-                    </th>
+                    <th>読書</th>
+                    <td>ライトノベル/小説</td>
+                    <td>漫画</td>
+                </tr>
+                <tr>
+                    <th>アニメ視聴</th>
+                    <td>国内アニメ</td>
+                </tr>
+                <tr>
+                    <th>音楽鑑賞</th>
+                    <td>ボカロ</td>
+                    <td>アニソン</td>
+                    <td>筝曲</td>
+                </tr>
+                <tr>
+                    <th>ゲームプレイ</th>
+                    <td>スマホゲーム</td>
+                </tr>
+                <tr>
+                    <th>Youtube視聴</th>
+                    <td>アニソン</td>
+                    <td>ボカロ</td>
+                    <td>アニメ</td>
+                    <td>ゲーム実況</td>
                 </tr>
             </tbody>
             </table>
