table から箇条書きへ

--- a/about/index.html
+++ b/about/index.html
@@ -26,42 +26,35 @@
         </section>
         <section>
             <h2>syumi</h2>
-            <table>
-            <thead>
-                <tr>
-                    <th>趣味</th>
-                    <th>内容</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>読書</th>
-                    <td>ライトノベル/小説</td>
-                    <td>漫画</td>
-                </tr>
-                <tr>
-                    <th>アニメ視聴</th>
-                    <td>国内アニメ</td>
-                </tr>
-                <tr>
-                    <th>音楽鑑賞</th>
-                    <td>ボカロ</td>
-                    <td>アニソン</td>
-                    <td>筝曲</td>
-                </tr>
-                <tr>
-                    <th>ゲームプレイ</th>
-                    <td>スマホゲーム</td>
-                </tr>
-                <tr>
-                    <th>Youtube視聴</th>
-                    <td>アニソン</td>
-                    <td>ボカロ</td>
-                    <td>アニメ</td>
-                    <td>ゲーム実況</td>
-                </tr>
-            </tbody>
-            </table>
+            <section>
+                <h3>読書</h3>
+                <p>ライトノベル/小説</p>
+                <ul>
+                    <li>メイデーア転生物語</li>
+                </ul>
+                <p>漫画</p>
+            </section>
+            <section>
+                <h3>アニメ視聴</h3>
+                <p>国内アニメ</p>
+            </section>
+            <section>
+                <h3>音楽鑑賞</h3>
+                <p>ボカロ</p>
+                <p>アニソン</p>
+                <p>筝曲</p>
+            </section>
+            <section>
+                <h3>Youtube視聴</h3>
+                <p>アニソン</p>
+                <p>ボカロ</p>
+                <p>アニメ</p>
+                <p>ゲーム実況</p>
+            </section>
+            <section>
+                <h3>ゲームプレイ</h3>
+                <p>スマホゲーム</p>
+            </section>
         </section>
     </main>
     <footer></footer>
