--- a/about/index.html
+++ b/about/index.html
@@ -22,10 +22,20 @@
     </nav>
     <main>
         <section>
-            <h2>name</h2>
+            <h2>名前</h2>
         </section>
         <section>
-            <h2>syumi</h2>
+            <h2>経歴</h2>
+            <section>
+                <h3>出身地</h3>
+                <p>富山県滑川市</p>
+            </section>
+            <section>
+                <h3>出身校</h3>
+            </section>
+        </section>
+        <section>
+            <h2>趣味</h2>
             <section>
                 <h3>読書</h3>
                 <p>ライトノベル/小説</p>
