--- a/about/index.html
+++ b/about/index.html
@@ -32,6 +32,7 @@
             </section>
             <section>
                 <h3>出身校</h3>
+                <p>富山県立富山北部高等学校</p>
             </section>
         </section>
         <section>
