--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header></header>
-    <nav id="menubar" style="display: none;">
+    <nav>
     <ul>
         <li>HOME</li>
         <li><a href="./about/index.html">About</a></li>
