--- a/about/index.html
+++ b/about/index.html
@@ -42,29 +42,67 @@
                 <p>ライトノベル/小説</p>
                 <ul>
                     <li>メイデーア転生物語</li>
+                    <li>華鬼</li>
                 </ul>
                 <p>漫画</p>
+                <ul>
+                    <li>転生悪女の黒歴史</li>
+                    <li>桃組＋戦記</li>
+                </ul>
             </section>
             <section>
                 <h3>アニメ視聴</h3>
                 <p>国内アニメ</p>
+                <ul>
+                    <li>ヴァイオレット・エヴァーガーデン</li>
+                    <li>ツルネ</li>
+                    <li>キノの旅</li>
+                </ul>
             </section>
             <section>
                 <h3>音楽鑑賞</h3>
-                <p>ボカロ</p>
-                <p>アニソン</p>
                 <p>筝曲</p>
+                <ul>
+                    <li>龍星群</li>
+                    <li>久遠</li>
+                    <li>天泣</li>
+                </ul>
             </section>
             <section>
                 <h3>Youtube視聴</h3>
                 <p>アニソン</p>
+                <ul>
+                    <li></li>
+                </ul>
                 <p>ボカロ</p>
+                <ul>
+                    <li>誰かの心臓になれたなら</li>
+                    <li>贖罪</li>
+                    <li>シャルル</li>
+                    <li>命に嫌われている</li>
+                    <li>天ノ邪</li>
+                </ul>
                 <p>アニメ</p>
+                <ul>
+                    <li>アイドリッシュセブンの曲</li>
+                    <li>アイドル</li>
+                </ul>
                 <p>ゲーム実況</p>
+                <ul>
+                    <li>英雄伝説軌跡シリーズ</li>
+                    <li>結城友奈は勇者である～花結いのきらめき～</li>
+                    <li>Fate/Grand Order</li>
+                </ul>
             </section>
             <section>
                 <h3>ゲームプレイ</h3>
                 <p>スマホゲーム</p>
+                <ul>
+                    <li>アイドリッシュセブン</li>
+                    <li>刀剣乱舞</li>
+                    <li>ダンジョンに出会いを求めるのは間違っているだろうか～メモリア・フレーゼ～</li>
+                    <li>TWISTED-WONDERLAND</li>
+                </ul>
             </section>
         </section>
     </main>
