--- a/Light/index.html
+++ b/Light/index.html
@@ -19,7 +19,8 @@
     </ul>
     </nav>
     <main>
-        <h1>HOME</h1>
+        <h1>アニメ</h1>
+        
     </main>
     <footer></footer>
 </body>
