--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>About me</header>
     <nav>
     <ul>
         <li>HOME</li>
