--- a/Light/index.html
+++ b/Light/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>About me</header>
     <nav>
     <ul>
         <li><a href="./about-me/index.html">Home</a></li>
@@ -20,7 +20,7 @@
     </nav>
     <main>
         <h1>アニメ</h1>
-        
+
     </main>
     <footer></footer>
 </body>
