--- a/main/index.html
+++ b/main/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>About me</header>
     <nav>
     <ul>
         <li><a href="./about-me/index.html">Home</a></li>
