--- a/about/index.html
+++ b/about/index.html
@@ -17,6 +17,7 @@
         <li>About</li>
         <li><a href="./main/index.html">Main</a></li>
         <li><a href="./Light/index.html">Light</a></li>
+        <li><a href="./anime/index.html">Anime</a></li>
         <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
