--- a/anime/index.html
+++ b/anime/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../contact.css">
+    <link rel="stylesheet" href="../anime.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,8 +15,8 @@
         <li><a href="./about/index.html">About</a></li>
         <li><a href="./main/index.html">Main</a></li>
         <li><a href="./Light/index.html">Light</a></li>
-        <li><a href="./anime/index.html">Anime</a></li>
-        <li>Contact</li>
+        <li>Anime</li>
+        <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
     <main>
