--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="./about/index.html">About</a></li>
         <li><a href="./main/index.html">Main</a></li>
         <li><a href="./Light/index.html">Light</a></li>
+        <li><a href="./anime/index.html">Anime</a></li>
         <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
