--- a/anime/index.html
+++ b/anime/index.html
@@ -16,6 +16,7 @@
         <li><a href="./main/index.html">Main</a></li>
         <li><a href="./Light/index.html">Light</a></li>
         <li>Anime</li>
+        <li><a href="./manga/index.html">Manga</a></li>
         <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
