--- a/Light/index.html
+++ b/Light/index.html
@@ -15,6 +15,8 @@
         <li><a href="./about/index.html">About</a></li>
         <li><a href="./main/index.html">Main</a></li>
         <li>Light</li>
+        <li><a href="./anime/index.html">Anime</a></li>
+        <li><a href="./manga/index.html">Manga</a></li>
         <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
