--- a/about/index.html
+++ b/about/index.html
@@ -18,6 +18,7 @@
         <li><a href="./main/index.html">Main</a></li>
         <li><a href="./Light/index.html">Light</a></li>
         <li><a href="./anime/index.html">Anime</a></li>
+        <li><a href="./manga/index.html">Manga</a></li>
         <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
