--- a/contact/index.html
+++ b/contact/index.html
@@ -16,6 +16,7 @@
         <li><a href="./main/index.html">Main</a></li>
         <li><a href="./Light/index.html">Light</a></li>
         <li><a href="./anime/index.html">Anime</a></li>
+        <li><a href="./manga/index.html">Manga</a></li>
         <li>Contact</li>
     </ul>
     </nav>
