--- a/manga/index.html
+++ b/manga/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../manga.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,10 +13,10 @@
     <ul>
         <li><a href="./about-me/index.html">Home</a></li>
         <li><a href="./about/index.html">About</a></li>
-        <li>Main</li>
+        <li><a href="./main/index.html">Main</a></li>
         <li><a href="./Light/index.html">Light</a></li>
         <li><a href="./anime/index.html">Anime</a></li>
-        <li><a href="./manga/index.html">Manga</a></li>
+        <li>Manga</li>
         <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
