--- a/about/index.html
+++ b/about/index.html
@@ -25,6 +25,7 @@
     <main>
         <section>
             <h2>名前</h2>
+            <p>香川歩美</p>
         </section>
         <section>
             <h2>経歴</h2>
