--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@
                     <li>アイドリッシュセブンの曲</li>
                     <li>アイドル</li>
                 </ul>
-                <p>ゲーム実況</p>
+                <p>ゲーム</p>
                 <ul>
                     <li>英雄伝説軌跡シリーズ</li>
                     <li>結城友奈は勇者である～花結いのきらめき～</li>
