--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@
                 </ul>
                 <p>アニメ</p>
                 <ul>
-                    <li></li>
+                    <li>鬼滅の刃</li>
                 </ul>
                 <p>ゲーム</p>
                 <ul>
