--- a/main/index.html
+++ b/main/index.html
@@ -22,6 +22,45 @@
     </nav>
     <main>
         <h1>MAIN</h1>
+        <p>私が気に入っているものの中からアニメ、ライトノベル、漫画が被っているもの</p>
+        <section>
+            <h2>アニメ・ライトノベル・漫画</h2>
+            <p>ファンタジー</p>
+            <ul>
+                <li>キミと僕の最後の戦場、あるいは世界が始まる聖戦</li>
+                <li>クロックワーク・プラネット</li>
+                <li>終末何してますか？忙しいですか？救ってもらっていいですか？</li>
+
+            </ul>
+            <p>SF/バトルアクション</p>
+            <ul>
+                <li>学戦都市アスタリスク</li>
+                <li>ソードアート・オンライン</li>
+                <li>文豪ストレイドッグス</li>
+            </ul>
+            <p>ダーク・ファンタジー</p>
+            <ul>
+                <li>コードギアス</li>
+            </ul>
+            <p>なろう系</p>
+            <ul>
+                <li>魔法科高校の劣等生シリーズ</li>
+                <li>ダンジョンに出会いを求めるのは間違っているだろうか シリーズ</li>
+                <li>異世界はスマートフォンとともに</li>
+                <li>転生したらスライムだった件</li>
+                <li>盾の勇者の成り上がり</li>
+                <li>賢者の孫</li>
+                <li>異世界チート魔術師</li>
+                <li>ありふれた職業で世界最強</li>
+                <li>本好きの下剋上 司書になるためには手段を選んでいられません</li>
+                <li>痛いのは嫌なので防御力に極振りしたいと思います</li>
+                <li>神達に拾われた男</li>
+                <li>魔王学院の不適合者 ～史上最強の魔王の始祖、転生して子孫たちの学校へ通う～</li>
+                <li>神達に拾われた男</li>
+                <li>スライム倒して300年、知らないうちにレベルMAXになってました</li>
+                <li></li>
+            </ul>
+        </section>
     </main>
     <footer></footer>
 </body>
