--- a/main/index.html
+++ b/main/index.html
@@ -53,6 +53,7 @@
                 <li>異世界チート魔術師</li>
                 <li>ありふれた職業で世界最強</li>
                 <li>本好きの下剋上 司書になるためには手段を選んでいられません</li>
+                <li>私、能力は平均値でって言ったよね！</li>
                 <li>痛いのは嫌なので防御力に極振りしたいと思います</li>
                 <li>神達に拾われた男</li>
                 <li>魔王学院の不適合者 ～史上最強の魔王の始祖、転生して子孫たちの学校へ通う～</li>
