--- a/anime/index.html
+++ b/anime/index.html
@@ -22,6 +22,7 @@
     </nav>
     <main>
         <h1>ANIME</h1>
+        <p>今季の気に入っているアニメ</p>
         <p>私が気に入っているアニメの紹介</p>
     </main>
     <footer></footer>
