--- a/anime/index.html
+++ b/anime/index.html
@@ -22,7 +22,12 @@
     </nav>
     <main>
         <h1>ANIME</h1>
-        <p>今季の気に入っているアニメ</p>
+        <p>2023年の気に入っているアニメ</p>
+        <ul>
+            <li>ホリミヤ~pi~</li>
+            <li>AYAKA~あやか~</li>
+            <li></li>
+        </ul>
         <p>私が気に入っているアニメの紹介</p>
     </main>
     <footer></footer>
