--- a/anime/index.html
+++ b/anime/index.html
@@ -24,7 +24,7 @@
         <h1>ANIME</h1>
         <p>2023年の気に入っているアニメ</p>
         <ul>
-            <li>ホリミヤ~pi~</li>
+            <li>ホリミヤ~piece~</li>
             <li>AYAKA~あやか~</li>
             <li></li>
         </ul>
