--- a/main/index.html
+++ b/main/index.html
@@ -30,7 +30,12 @@
                 <li>キミと僕の最後の戦場、あるいは世界が始まる聖戦</li>
                 <li>クロックワーク・プラネット</li>
                 <li>終末何してますか？忙しいですか？救ってもらっていいですか？</li>
-
+                <li>問題児たちが異世界から来るそうですよ</li>
+                <li>神様のいない日曜日</li>
+            </ul>
+            <p>異世界ファンタジー</p>
+            <ul>
+                <li>超人高校生たちは異世界でも余裕で生き抜くようです</li>
             </ul>
             <p>SF/バトルアクション</p>
             <ul>
@@ -60,6 +65,10 @@
                 <li>神達に拾われた男</li>
                 <li>スライム倒して300年、知らないうちにレベルMAXになってました</li>
                 <li></li>
+            </ul>
+            <p>新・日常系</p>
+            <ul>
+                <li>結城友奈は勇者であるシリーズ</li>
             </ul>
         </section>
     </main>
