--- a/main/index.html
+++ b/main/index.html
@@ -32,16 +32,22 @@
                 <li>終末何してますか？忙しいですか？救ってもらっていいですか？</li>
                 <li>問題児たちが異世界から来るそうですよ</li>
                 <li>神様のいない日曜日</li>
+                <li>最弱無敗の神装機竜（バハムート）</li>
+                <li>レッドデータガール（RDG）</li>
+                <li>処刑少女の生きる道（バージンロード）</li>
+                <li>悪役令嬢なのでラスボスを飼ってみました</li>
             </ul>
             <p>異世界ファンタジー</p>
             <ul>
                 <li>超人高校生たちは異世界でも余裕で生き抜くようです</li>
+                <li>失格紋の最強賢者</li>
             </ul>
             <p>SF/バトルアクション</p>
             <ul>
                 <li>学戦都市アスタリスク</li>
                 <li>ソードアート・オンライン</li>
                 <li>文豪ストレイドッグス</li>
+                <li>86-エイティシックス-</li>
             </ul>
             <p>ダーク・ファンタジー</p>
             <ul>
