--- a/Light/index.html
+++ b/Light/index.html
@@ -17,6 +17,7 @@
         <li>Light</li>
         <li><a href="./anime/index.html">Anime</a></li>
         <li><a href="./manga/index.html">Manga</a></li>
+        <li><a href="./game/index.html">game</a></li>
         <li><a href="./contact/index.html">Contact</a></li>
     </ul>
     </nav>
