--- a/contact/index.html
+++ b/contact/index.html
@@ -17,6 +17,7 @@
         <li><a href="./Light/index.html">Light</a></li>
         <li><a href="./anime/index.html">Anime</a></li>
         <li><a href="./manga/index.html">Manga</a></li>
+        <li><a href="./game/index.html">game</a></li>
         <li>Contact</li>
     </ul>
     </nav>
