--- a/game/index.html
+++ b/game/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../light.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>About me</header>
+    <nav>
+    <ul>
+        <li><a href="./about-me/index.html">Home</a></li>
+        <li><a href="./about/index.html">About</a></li>
+        <li><a href="./main/index.html">Main</a></li>
+        <li><a href="./Light/index.html">Light</a></li>
+        <li><a href="./anime/index.html">Anime</a></li>
+        <li><a href="./manga/index.html">Manga</a></li>
+        <li>game</li>
+        <li><a href="./contact/index.html">Contact</a></li>
+
+    </ul>
+    </nav>
+    <main>
+        <h1>アニメ</h1>
+
+    </main>
+    <footer></footer>
 </body>
 </html>
