--- a/main/index.html
+++ b/main/index.html
@@ -37,11 +37,14 @@
                 <li>レッドデータガール（RDG）</li>
                 <li>処刑少女の生きる道（バージンロード）</li>
                 <li>悪役令嬢なのでラスボスを飼ってみました</li>
-            </ul>
-            <p>異世界ファンタジー</p>
-            <ul>
+                <li>ストライク・ザ・ブラッド</li>
+                <li>アサシンズプライド</li>
+                <li>魔法少女まどか☆マギカ</li>
+                <li>魔法使いの嫁シリーズ</li>
                 <li>超人高校生たちは異世界でも余裕で生き抜くようです</li>
                 <li>失格紋の最強賢者</li>
+                <li>陰の実力者になりたくて</li>
+                <li>彼女が公爵邸に行った理由</li>
             </ul>
             <p>SF/バトルアクション</p>
             <ul>
@@ -76,6 +79,48 @@
             <p>新・日常系</p>
             <ul>
                 <li>結城友奈は勇者であるシリーズ</li>
+            </ul>
+            <h2>ライトノベル・漫画</h2>
+            <p>	SF・ファンタジー</p>
+            <ul>
+                <li>詐騎士</li>
+                <li>悪役令嬢な婚約者（妻）の観察記録</li>
+                <li>父は英雄、母は精霊、娘の私は転生者</li>
+                <li>魔導士は平凡を望む</li>
+                <li>皇帝つき女官は花嫁として望まれ中</li>
+                <li>公爵令嬢の嗜み</li>
+                <li>やり直し令嬢は皇帝陛下を攻略中</li>
+                <li>二度と家には帰りません</li>
+                <li>魔法世界の受付嬢になりたいです</li>
+                <li>双子の姉が神子として引き取られて、私は捨てられたけど多分私が神子である</li>
+                <li>転生した大聖女は、聖女であることをひた隠す</li>
+                <li>狼領主のお嬢様</li>
+                <li>婚約者は、私の妹に恋をする</li>
+                <li>家から逃げ出したい私が、うっかり憧れの大魔法使い様を買ってしまったら</li>
+                <li>前世聖女は手を抜きたい</li>
+                <li>たくまし令嬢はへこたれない！</li>
+            </ul>
+            <p>	少女・女性マンガ</p>
+            <ul>
+                <li>元、落ちこぼれ公爵令嬢です。</li>
+                <li>転生した悪役令嬢は復讐を望まない</li>
+                <li>メイデーア転生物語</li>
+                <li>捨てられ男爵令嬢は黒騎士様のお気に入り</li>
+                <li>落ちぶれ才女の幸福</li>
+                <li>成り行きで婚約を申し込んだ弱気貧乏令嬢ですが、なぜか次期公爵様に溺愛されて囚われています</li>
+                <li>婚約破棄された替え玉令嬢、初恋の年上王子に溺愛される</li>
+            </ul>
+            <p>悪役令嬢ファンタジー</p>
+            <ul>
+                <li>最後にひとつだけお願いしてもよろしいでしょうか。</li>
+                <li>歴史に残る悪女になるぞ</li>
+                <li>どうも、悪役にされた令嬢ですけれど</li>
+                <li>断罪されている悪役令嬢と入れ替わって婚約者たちをぶっ飛ばしたら、溺愛が待っていました</li>
+            </ul>
+            <p>学園ファンタジー</p>
+            <ul>
+                <li>サイレント・ウィッチ</li>
+                <li>神さま学校の落ちこぼれ</li>
             </ul>
         </section>
     </main>
