--- a/main/index.html
+++ b/main/index.html
@@ -45,6 +45,7 @@
                 <li>失格紋の最強賢者</li>
                 <li>陰の実力者になりたくて</li>
                 <li>彼女が公爵邸に行った理由</li>
+                <li>聖女の魔力は万能です</li>
             </ul>
             <p>SF/バトルアクション</p>
             <ul>
@@ -99,6 +100,11 @@
                 <li>家から逃げ出したい私が、うっかり憧れの大魔法使い様を買ってしまったら</li>
                 <li>前世聖女は手を抜きたい</li>
                 <li>たくまし令嬢はへこたれない！</li>
+                <li>100年後に転生した私、前世の従騎士に求婚されました</li>
+                <li>高飛車皇女は黙ってない</li>
+                <li>断罪された悪役令嬢は、逆行して完璧な悪女を目指す</li>
+                <li>ただのコスプレイヤーなので聖女は辞めてもいいですか？</li>
+                <li>王太士に婚約破棄されたので、もうバカのふりはやめようと思います</li>
             </ul>
             <p>	少女・女性マンガ</p>
             <ul>
@@ -116,11 +122,41 @@
                 <li>歴史に残る悪女になるぞ</li>
                 <li>どうも、悪役にされた令嬢ですけれど</li>
                 <li>断罪されている悪役令嬢と入れ替わって婚約者たちをぶっ飛ばしたら、溺愛が待っていました</li>
+                <li>悪役令嬢ルートがないなんて誰が言ったの？</li>
+                <li>悪役令嬢（予定）らしいけど、私はお菓子が食べたい</li>
+                <li>その悪役令嬢は攻略本を携えている</li>
+                <li>悪役令嬢に転生したはずが、主人公より溺愛されてるみたいです</li>
             </ul>
             <p>学園ファンタジー</p>
             <ul>
                 <li>サイレント・ウィッチ</li>
                 <li>神さま学校の落ちこぼれ</li>
+            </ul>
+            <h2>アニメ・漫画</h2>
+            <p>コメディ</p>
+            <ul>
+                <li>不機嫌なモモノケ庵</li>
+                <li>月刊少女野崎くん</li>
+            </ul>
+            <p>ファンタジー</p>
+            <ul>
+                <li>プランダラ</li>
+                <li>真夜中のオカルト公務員</li>
+                <li>終わりのセラフ</li>
+                <li>賢者の孫</li>
+                <li>転生貴族の異世界冒険録</li>
+                <li>FAIRY TAIL</li>
+                <li>ブラッククローバー</li>
+                <li>七つの大罪</li>
+                <li>マギ</li>
+                <li>ツバサ・クロニクル</li>
+            </ul>
+            <p>ダーク・ファンタジー</p>
+            <ul>
+                <li>ヴァニタスの手記（カルテ）</li>
+                <li>鬼滅の刃</li>
+                <li>呪術廻戦</li>
+                <li>D.Gray-manシリーズ</li>
             </ul>
         </section>
     </main>
