--- a/main/index.html
+++ b/main/index.html
@@ -39,7 +39,6 @@
                 <li>悪役令嬢なのでラスボスを飼ってみました</li>
                 <li>ストライク・ザ・ブラッド</li>
                 <li>アサシンズプライド</li>
-                <li>魔法少女まどか☆マギカ</li>
                 <li>魔法使いの嫁シリーズ</li>
                 <li>超人高校生たちは異世界でも余裕で生き抜くようです</li>
                 <li>失格紋の最強賢者</li>
@@ -150,6 +149,7 @@
                 <li>七つの大罪</li>
                 <li>マギ</li>
                 <li>ツバサ・クロニクル</li>
+                <li>魔法少女まどか☆マギカ</li>
             </ul>
             <p>ダーク・ファンタジー</p>
             <ul>
@@ -157,6 +157,11 @@
                 <li>鬼滅の刃</li>
                 <li>呪術廻戦</li>
                 <li>D.Gray-manシリーズ</li>
+            </ul>
+            <h2>アニメ・ライトノベル</h2>
+            <p>ファンタジー</p>
+            <ul>
+                <li>後宮の烏</li>
             </ul>
         </section>
     </main>
