--- a/anime/index.html
+++ b/anime/index.html
@@ -26,9 +26,37 @@
         <ul>
             <li>ホリミヤ~piece~</li>
             <li>AYAKA~あやか~</li>
-            <li></li>
+            <li>七つの魔剣が支配する</li>
+            <li>BLEACH 千年血戦篇</li>
+            <li>文豪ストレイドッグス 第5シーズン</li>
+            <li>彼女が公爵邸に行った理由</li>
         </ul>
         <p>私が気に入っているアニメの紹介</p>
+        <ul>
+            <li>ヴァイオレット・エヴァーガーデン</li>
+            <li>ツルネ</li>
+            <li>キノの旅</li>
+            <li>本好きの下克上</li>
+            <li>陰の実力者になりたくて</li>
+            <li>本好きの下剋上 司書になるためには手段を選んでいられません</li>
+            <li>私、能力は平均値でって言ったよね！</li>
+            <li>盾の勇者の成り上がり</li>
+            <li>賢者の孫</li>
+            <li>異世界チート魔術師</li>
+            <li>転生王女と天才令嬢の魔法革命</li>
+            <li>冰剣の魔術師が世界を統べる</li>
+            <li>最強陰陽師の異世界転生記</li>
+            <li>英雄王、武を極めるため転生す</li>
+            <li>精霊幻想記</li>
+            <li>スライム倒して300年、知らないうちにレベルMAXになってました</li>
+            <li>たとえばラストダンジョン前の村の少年が序盤の街で暮らすような物語</li>
+            <li>Angel Beats!</li>
+            <li>炎炎ノ消防隊</li>
+            <li>クジラの子らは砂上に歌う</li>
+            <li>アイドリッシュセブン</li>
+            <li>文豪とアルケミスト</li>
+            <li>刀剣乱舞</li>
+        </ul>
     </main>
     <footer></footer>
 </body>
