--- a/game/index.html
+++ b/game/index.html
@@ -19,12 +19,24 @@
         <li><a href="./manga/index.html">Manga</a></li>
         <li>game</li>
         <li><a href="./contact/index.html">Contact</a></li>
-
     </ul>
     </nav>
     <main>
-        <h1>アニメ</h1>
-
+        <h1>ゲーム</h1>
+        <p>自分でプレイしているゲーム</p>
+        <ul>
+            <li>アイドリッシュセブン</li>
+            <li>刀剣乱舞</li>
+            <li>文豪とアルケミスト</li>
+            <li>ダンジョンに出会いを求めるのは間違っているだろうか~メモリア・フレーゼ~</li>
+            <li>原神</li>
+            <li>TWISTED-WONDERLAND</li>
+        </ul>
+        <p>実況動画をみるゲーム</p>
+        <ul>
+            <li>英雄伝説軌跡シリーズ</li>
+            <li>マギア・レコード</li>
+        </ul>
     </main>
     <footer></footer>
 </body>
