--- a/main/index.html
+++ b/main/index.html
@@ -23,7 +23,7 @@
     </nav>
     <main>
         <h1>MAIN</h1>
-        <p>私が気に入っているものの中からアニメ、ライトノベル、漫画が被っているもの</p>
+        <p>私が気に入っているものの中からライトノベル原作の漫画・アニメ（本を持っているもの）</p>
         <section>
             <h2>アニメ・ライトノベル・漫画</h2>
             <p>ファンタジー</p>
@@ -39,12 +39,8 @@
                 <li>悪役令嬢なのでラスボスを飼ってみました</li>
                 <li>ストライク・ザ・ブラッド</li>
                 <li>アサシンズプライド</li>
-                <li>魔法使いの嫁シリーズ</li>
                 <li>超人高校生たちは異世界でも余裕で生き抜くようです</li>
                 <li>失格紋の最強賢者</li>
-                <li>陰の実力者になりたくて</li>
-                <li>彼女が公爵邸に行った理由</li>
-                <li>聖女の魔力は万能です</li>
             </ul>
             <p>SF/バトルアクション</p>
             <ul>
@@ -61,20 +57,11 @@
             <ul>
                 <li>魔法科高校の劣等生シリーズ</li>
                 <li>ダンジョンに出会いを求めるのは間違っているだろうか シリーズ</li>
-                <li>異世界はスマートフォンとともに</li>
                 <li>転生したらスライムだった件</li>
-                <li>盾の勇者の成り上がり</li>
-                <li>賢者の孫</li>
-                <li>異世界チート魔術師</li>
-                <li>ありふれた職業で世界最強</li>
-                <li>本好きの下剋上 司書になるためには手段を選んでいられません</li>
-                <li>私、能力は平均値でって言ったよね！</li>
                 <li>痛いのは嫌なので防御力に極振りしたいと思います</li>
                 <li>神達に拾われた男</li>
                 <li>魔王学院の不適合者 ～史上最強の魔王の始祖、転生して子孫たちの学校へ通う～</li>
                 <li>神達に拾われた男</li>
-                <li>スライム倒して300年、知らないうちにレベルMAXになってました</li>
-                <li></li>
             </ul>
             <p>新・日常系</p>
             <ul>
@@ -139,6 +126,7 @@
             </ul>
             <p>ファンタジー</p>
             <ul>
+                <li>魔法使いの嫁シリーズ</li>
                 <li>プランダラ</li>
                 <li>真夜中のオカルト公務員</li>
                 <li>終わりのセラフ</li>
@@ -150,6 +138,9 @@
                 <li>マギ</li>
                 <li>ツバサ・クロニクル</li>
                 <li>魔法少女まどか☆マギカ</li>
+                <li>聖女の魔力は万能です</li>
+                <li>異世界はスマートフォンとともに</li>
+                <li>ありふれた職業で世界最強</li>
             </ul>
             <p>ダーク・ファンタジー</p>
             <ul>
