--- a/game/index.html
+++ b/game/index.html
@@ -35,7 +35,15 @@
         <p>実況動画をみるゲーム</p>
         <ul>
             <li>英雄伝説軌跡シリーズ</li>
-            <li>マギア・レコード</li>
+            <li>マギアレコード</li>
+            <li>原神</li>
+            <li>魔法使いの約束</li>
+            <li>Fate/Grand Order</li>
+            <li>イースシリーズ</li>
+            <li>結城友奈は勇者である～花結いのきらめき～</li>
+            <li>咲うアルスノトリア</li>
+            <li>崩壊スレータイル</li>
+            <li>ダンジョンに出会いを求めるのは間違っているだろうか~メモリア・フレーゼ~</li>
         </ul>
     </main>
     <footer></footer>
