--- a/anime/index.html
+++ b/anime/index.html
@@ -56,6 +56,8 @@
             <li>アイドリッシュセブン</li>
             <li>文豪とアルケミスト</li>
             <li>刀剣乱舞</li>
+            <li>Free!</li>
+            <li></li>
         </ul>
     </main>
     <footer></footer>
