--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     </ul>
     </nav>
     <main>
+    <figure>
+        <img src="photo/hoshizora.jpg" alt="home">
+    </figure>
         <h1>HOME</h1>
     </main>
     <footer></footer>
