--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header>About me</header>
+    <header class="header">
+        About me
+    </header>
     <nav>
     <ul>
         <li>HOME</li>
