--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <header class="header">
         About me
+        <aside id="mainimg">
+            <img src="photo/sakura_haikei.jpg" alt class="slide0">
+            <img src="photo/sakura_haikei.jpg" alt class="slide1">
+            <img src="photo/sakura_gensou.jpg" alt class="slide2">
+        </aside>
     </header>
     <nav>
     <ul>
@@ -24,9 +29,6 @@
     </ul>
     </nav>
     <main>
-    <figure>
-        <img src="photo/hoshizora.jpg" alt="home">
-    </figure>
         <h1>HOME</h1>
     </main>
     <footer></footer>
