--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <img src="photo/sakura_haikei.jpg" alt class="slide0">
             <img src="photo/sakura_haikei.jpg" alt class="slide1">
             <img src="photo/sakura_gensou.jpg" alt class="slide2">
+            <img src="photo/sakura_gensou3.webp" alt class="slide3">
         </aside>
     </header>
     <nav>
