--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img src="photo/sakura_gensou3.webp" alt class="slide3">
         </aside>
     </header>
-    <nav>
-    <ul>
+    <nav id="menubar" style="display: none;">
+    <ul class="nav-list">
         <li>HOME</li>
         <li><a href="./about/index.html">About</a></li>
         <li><a href="./main/index.html">Main</a></li>
