--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="photo/sakura_gensou3.webp" alt class="slide3">
         </aside>
     </header>
-    <nav id="menubar" style="display: block;">
+    <nav>
     <ul class="nav-list">
         <li>HOME</li>
         <li><a href="./about/index.html">About</a></li>
