--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
             <img src="photo/sakura_gensou3.webp" alt class="slide3">
         </aside>
     </header>
-    <nav>
-    <ul class="nav-list">
-        <li>HOME</li>
-        <li><a href="./about/index.html">About</a></li>
-        <li><a href="./main/index.html">Main</a></li>
-        <li><a href="./Light/index.html">Light</a></li>
-        <li><a href="./anime/index.html">Anime</a></li>
-        <li><a href="./manga/index.html">Manga</a></li>
-        <li><a href="./game/index.html">game</a></li>
-        <li><a href="./contact/index.html">Contact</a></li>
-    </ul>
+    <nav id="menubar">
+        <ul class="nav-list">
+            <li>HOME</li>
+            <li><a href="./about/index.html">About</a></li>
+            <li><a href="./main/index.html">Main</a></li>
+            <li><a href="./Light/index.html">Light</a></li>
+            <li><a href="./anime/index.html">Anime</a></li>
+            <li><a href="./manga/index.html">Manga</a></li>
+            <li><a href="./game/index.html">game</a></li>
+            <li><a href="./contact/index.html">Contact</a></li>
+        </ul>
     </nav>
     <main>
         <h1>HOME</h1>
