--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
     </nav>
     <main>
         <h1>HOME</h1>
+        <p>それぞれのページの説明</p>
+        <h2>About</h2>
+        <p>自己紹介</p>
+        <h2>Main</h2>
+        <p>私が気に入っているものの中からライトノベル原作の漫画・アニメ（本を持っているもの）の紹介</p>
+        <h2>Light</h2>
+        <p></p>
+        <h2>Anime</h2>
+        <h2>Manga</h2>
+        <h2>game</h2>
+        <h2>Contact</h2>
     </main>
     <footer></footer>
 </body>
