--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
         <li><a href="./about-me/index.html">Home</a></li>
         <li>About</li>
         <li><a href="./main/index.html">Main</a></li>
-        <li><a href="./Light/index.html">Light</a></li>
+        <li><a href="./light/index.html">Light</a></li>
         <li><a href="./anime/index.html">Anime</a></li>
         <li><a href="./manga/index.html">Manga</a></li>
         <li><a href="./game/index.html">game</a></li>
