--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>HOME</li>
             <li><a href="./about/index.html">About</a></li>
             <li><a href="./main/index.html">Main</a></li>
-            <li><a href="./Light/index.html">Light</a></li>
+            <li><a href="./light/index.html">Light</a></li>
             <li><a href="./anime/index.html">Anime</a></li>
             <li><a href="./manga/index.html">Manga</a></li>
             <li><a href="./game/index.html">game</a></li>
