--- a/manga/index.html
+++ b/manga/index.html
@@ -14,7 +14,7 @@
             <li><a href="./about-me/index.html">Home</a></li>
             <li><a href="./about/index.html">About</a></li>
             <li><a href="./main/index.html">Main</a></li>
-            <li><a href="./Light/index.html">Light</a></li>
+            <li><a href="./light/index.html">Light</a></li>
             <li><a href="./anime/index.html">Anime</a></li>
             <li>Manga</li>
             <li><a href="./game/index.html">game</a></li>
