--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
         <h2>Main</h2>
         <p>私が気に入っているものの中からライトノベル原作の漫画・アニメ（本を持っているもの）の紹介</p>
         <h2>Light</h2>
-        <p></p>
+        <p>私が気に入っているライトノベル・小説の紹介</p>
         <h2>Anime</h2>
+        <p>私が気に入っているアニメの紹介</p>
         <h2>Manga</h2>
+        <p>私が気に入っている漫画の紹介</p>
         <h2>game</h2>
+        <p>私が気に入っているゲームの紹介</p>
         <h2>Contact</h2>
     </main>
     <footer></footer>
