--- a/light/index.html
+++ b/light/index.html
@@ -22,7 +22,8 @@
         </ul>
     </nav>
     <main>
-        <h1>アニメ</h1>
+        <h1>ライトノベル・小説</h1>
+        
     </main>
     <footer></footer>
 </body>
