--- a/light/index.html
+++ b/light/index.html
@@ -23,7 +23,14 @@
     </nav>
     <main>
         <h1>ライトノベル・小説</h1>
-        
+        <p></p>
+        <ul>
+            <li>華鬼</li>
+            <li>おこぼれ姫と円卓の騎士</li>
+            <li>メイデーア魔王転世紀</li>
+            <li>悪役令嬢らしく、攻略対象を服従させます 推しがダメになっていて解釈違いなんですけど!?</li>
+
+        </ul>
     </main>
     <footer></footer>
 </body>
