--- a/main/index.html
+++ b/main/index.html
@@ -91,6 +91,11 @@
                 <li>断罪された悪役令嬢は、逆行して完璧な悪女を目指す</li>
                 <li>ただのコスプレイヤーなので聖女は辞めてもいいですか？</li>
                 <li>王太士に婚約破棄されたので、もうバカのふりはやめようと思います</li>
+                <li>元・傾国の美女とフラグクラッシャー王太子 転生しても処刑エンドが回避できません!?</li>
+                <li>グランドール王国再生録 破滅の悪役王女ですが救国エンドをお望みです</li>
+                <li>義妹が聖女だからと婚約破棄されましたが、私は妖精の愛し子です</li>
+                <li>婚約破棄された公爵令嬢は森に引き籠ります 黒のグリモワールと呪われた魔女</li>
+                <li>お荷物と呼ばれた転生姫は、召喚勇者に恋をして聖女になりました</li>
             </ul>
             <p>	少女・女性マンガ</p>
             <ul>
@@ -112,6 +117,9 @@
                 <li>悪役令嬢（予定）らしいけど、私はお菓子が食べたい</li>
                 <li>その悪役令嬢は攻略本を携えている</li>
                 <li>悪役令嬢に転生したはずが、主人公より溺愛されてるみたいです</li>
+                <li>悪役令嬢?いいえ、極悪令嬢ですわ</li>
+                <li>悪役令嬢、セシリア・シルビィは死にたくないので男装することにした。</li>
+                <li>悪役令嬢、ブラコンにジョブチェンジします</li>
             </ul>
             <p>学園ファンタジー</p>
             <ul>
