--- a/manga/index.html
+++ b/manga/index.html
@@ -23,6 +23,9 @@
     </nav>
     <main>
         <h1>MANGA</h1>
+        <ul>
+            <li>死神と銀の騎士</li>
+        </ul>
     </main>
     <footer></footer>
 </body>
