--- a/main/index.html
+++ b/main/index.html
@@ -96,6 +96,20 @@
                 <li>義妹が聖女だからと婚約破棄されましたが、私は妖精の愛し子です</li>
                 <li>婚約破棄された公爵令嬢は森に引き籠ります 黒のグリモワールと呪われた魔女</li>
                 <li>お荷物と呼ばれた転生姫は、召喚勇者に恋をして聖女になりました</li>
+                <li>王弟殿下のお気に入り 転生しても天敵から逃げられないようです!?</li>
+                <li>絶滅危惧種 花嫁 虐げられた姫ですが王子様の呪いを解いて幸せになります</li>
+                <li>異世界転移したけど、王立学院で事務員やってます 平穏な日常、時々腹黒教授</li>
+                <li>星の砂を紡ぐ者たち 落ちこぼれ砂魔法市青銀の約束</li>
+                <li>追放された聖女ですが、どうやら私が本物です 前世薬師は"癒し"の薬で救いたい!</li>
+                <li>毒殺される悪役令嬢ですが、いつの間にか溺愛ルートに入っていたようで</li>
+                <li>闇属性の嫌われ王女は、滅びの連鎖を断ち切りたい</li>
+                <li>推定悪役令嬢は国一番のブサイクに嫁がされるようです</li>
+                <li>あやかし恋紡ぎ 儚き乙女は妖狐の王に溺愛される</li>
+                <li>転生王女は幼馴染の溺愛包囲網から逃げ出したい 前世で振られたのは私よね!?</li>
+                <li>わたくしのことが大嫌いな義弟が護衛騎士になりました 実は溺愛されていたって本当なの!?</li>
+                <li>「死んでみろ」と言われたので死にました。</li>
+                <li>妹に婚約者を取られたら見知らぬ公爵様に求婚されました</li>
+
             </ul>
             <p>	少女・女性マンガ</p>
             <ul>
