--- a/light/index.html
+++ b/light/index.html
@@ -23,7 +23,70 @@
     </nav>
     <main>
         <h1>ライトノベル・小説</h1>
-        <p></p>
+        <p>角川スニーカー文庫</p>
+        <ul>
+            <li>コードギアスシリーズ</li>
+            <li>問題児たちが異世界から来るそうですよ</li>
+            <li>RDG レッドデータガール</li>
+            <li>終末何してますか？忙しいですか？救ってもらっていいですか？</li>
+            <li>ラストエンブリオ</li>
+            <li>ミリオン・クラウン</li>
+            <li>終末何してますか？もう一度だけ、会えますか？</li>
+        </ul>
+        <p>角川ビーンズ文庫</p>
+        <ul>
+            <li>ループ中の虐げられ令嬢だった私、今世は最強聖女なうえに溺愛モードみたいです</li>
+            <li>元・傾国の美女とフラグクラッシャー王太子 転生しても処刑エンドが回避できません!?</li>
+            <li>グランドール王国再生録 破滅の悪役王女ですが救国エンドをお望みです</li>
+            <li>義妹が聖女だからと婚約破棄されましたが、私は妖精の愛し子です</li>
+            <li>婚約破棄された公爵令嬢は森に引き籠ります 黒のグリモワールと呪われた魔女</li>
+            <li>お荷物と呼ばれた転生姫は、召喚勇者に恋をして聖女になりました</li>
+            <li>王弟殿下のお気に入り 転生しても天敵から逃げられないようです!?</li>
+            <li>絶滅危惧種 花嫁 虐げられた姫ですが王子様の呪いを解いて幸せになります</li>
+            <li>異世界転移したけど、王立学院で事務員やってます 平穏な日常、時々腹黒教授</li>
+            <li>星の砂を紡ぐ者たち 落ちこぼれ砂魔法市青銀の約束</li>
+            <li>追放された聖女ですが、どうやら私が本物です 前世薬師は"癒し"の薬で救いたい!</li>
+            <li>毒殺される悪役令嬢ですが、いつの間にか溺愛ルートに入っていたようで</li>
+            <li>闇属性の嫌われ王女は、滅びの連鎖を断ち切りたい</li>
+            <li>推定悪役令嬢は国一番のブサイクに嫁がされるようです</li>
+            <li>あやかし恋紡ぎ 儚き乙女は妖狐の王に溺愛される</li>
+            <li>転生王女は幼馴染の溺愛包囲網から逃げ出したい 前世で振られたのは私よね!?</li>
+            <li>わたくしのことが大嫌いな義弟が護衛騎士になりました 実は溺愛されていたって本当なの!?</li>
+            <li>「死んでみろ」と言われたので死にました。</li>
+            <li>落ちぶれ才女の幸福</li>
+            <li>妹に婚約者を取られたら見知らぬ公爵様に求婚されました</li>
+            <li>悪役令嬢?いいえ、極悪令嬢ですわ</li>
+            <li>悪役令嬢、セシリア・シルビィは死にたくないので男装することにした。</li>
+            <li>悪役令嬢、ブラコンにジョブチェンジします</li>
+            <li>悪役令嬢なのでラスボスを飼ってみました</li>
+            <li>文豪ストレイドッグス</li>
+            <li>やり直し令嬢は皇帝陛下を攻略中</li>
+            <li>落ちぶれ才女の幸福 陛下に棄てられたので、最愛の人を救いに行きます</li>
+            <li>100年後に転生した私、前世の従騎士に求婚されました</li>
+            <li></li>
+        </ul>
+        <p>カドカワBOOKS</p>
+        <ul>
+            <li>公爵令嬢の嗜み</li>
+            <li>狼領主のお嬢様</li>
+            <li>父は英雄、母は精霊、娘の私は転生者</li>
+            <li>大公妃候補だけど、堅実に行こうと思います</li>
+            <li>痛いのは嫌なので防御力に極振りしたいと思います</li>
+            <li>私はおとなしく消え去ることにします</li>
+            <li>妹に婚約者を譲れと言われました 最強の竜に気に入られてまさかの王国乗っ取り?</li>
+            <li>地味で目立たない私は、今日で終わりにします。</li>
+            <li>転生令嬢は冒険者を志す</li>
+            <li>悪役令嬢になんかなりません。私は『普通』の公爵令嬢です!</li>
+            <li>加護なし令嬢の小さな村 ~さあ、領地運営を始めましょう!~</li>
+            <li>サイレント・ウィッチ 鎮目の魔女の隠しごと</li>
+            <li>草魔法師クロエの二度目の人生 自由になって子ドラゴンとレベルMAX薬師ライフ</li>
+            <li>家から追い出された私は、隣国のお抱え錬金術師として、幸せな第二の人生を送ることにしました!</li>
+            <li>魔術師クノンは見えている</li>
+            <li>国渡りの錬金術師</li>
+            <li>碧玉の男装香療師は、不思議な癒やし術で宮廷医官になりました。</li>
+            <li>泡沫に神は微笑む</li>
+
+        </ul>
         <ul>
             <li>華鬼</li>
             <li>おこぼれ姫と円卓の騎士</li>
