--- a/light/index.html
+++ b/light/index.html
@@ -62,8 +62,18 @@
             <li>文豪ストレイドッグス</li>
             <li>やり直し令嬢は皇帝陛下を攻略中</li>
             <li>落ちぶれ才女の幸福 陛下に棄てられたので、最愛の人を救いに行きます</li>
-            <li>100年後に転生した私、前世の従騎士に求婚されました</li>
-            <li></li>
+            <li>100年後に転生した私、前世の従騎士に求婚されました 陛下は私が元・王女だとお気づきでないようです</li>
+        </ul>
+        <p>GA文庫</p>
+        <ul>
+            <li>ダンジョンに出会いを求めるのは間違っているだろうか</li>
+            <li>ダンジョンに出会いを求めるのは間違っているだろうか外伝 ソード・オラトリア</li>
+            <li>最弱無敗の神装機竜《バハムート》</li>
+            <li>超人高校生たちは異世界でも余裕で生き抜くようです!</li>
+            <li>処刑少女の生きる道（バージンロード）</li>
+            <li>アストレア・レコード ダンジョンに出会いを求めるのは間違っているだろうか英雄譚</li>
+            <li>ダンジョンに出会いを求めるのは間違っているだろうか オラリオ・ストーリーズ</li>
+            <li>ダンジョンに出会いを求めるのは間違っているだろうか 掌編集</li>
         </ul>
         <p>カドカワBOOKS</p>
         <ul>
@@ -85,11 +95,21 @@
             <li>国渡りの錬金術師</li>
             <li>碧玉の男装香療師は、不思議な癒やし術で宮廷医官になりました。</li>
             <li>泡沫に神は微笑む</li>
-
+        </ul>
+        <p>ビーズログ文庫</p>
+        <ul>
+            <li>(仮)花嫁のやんごとなき事情</li>
+            <li>おこぼれ姫と円卓の騎士</li>
+            <li>花冠の王国の花嫌い姫</li>
+            <li>茉莉花官吏伝</li>
+            <li>月華鬼 緋色の異端者と主従契約</li>
+            <li>魔王と勇者に溺愛されて、お手上げです!</li>
+            <li></li>
+            <li></li>
+            <li></li>
         </ul>
         <ul>
             <li>華鬼</li>
-            <li>おこぼれ姫と円卓の騎士</li>
             <li>メイデーア魔王転世紀</li>
             <li>悪役令嬢らしく、攻略対象を服従させます 推しがダメになっていて解釈違いなんですけど!?</li>
 
