--- a/light/index.html
+++ b/light/index.html
@@ -104,13 +104,41 @@
             <li>茉莉花官吏伝</li>
             <li>月華鬼 緋色の異端者と主従契約</li>
             <li>魔王と勇者に溺愛されて、お手上げです!</li>
+            <li>婚約回避のため、声を出さないと決めました!!</li>
+            <li>歴史に残る悪女になるぞ 悪役令嬢になるほど王子の溺愛は加速するようです!</li>
+            <li>勿論、慰謝料請求いたします!</li>
+            <li>お飾り王妃になったので、こっそり働きに出ることにしました</li>
+            <li>悪役令嬢ルートがないなんて、誰が言ったの？</li>
+            <li>弱気MAX令嬢なのに、敏腕婚約者様の賭けに乗ってしまった</li>
+            <li>王太子殿下は後宮に占い師をご所望です</li>
+            <li>悪役令嬢は夜告鳥を目指す</li>
+            <li>身代わり婚約者なのに、銀狼陛下がどうしても離してくれません!</li>
+            <li>ただのコスプレイヤーなので聖女はやめてもいいですか？</li>
+            <li>冷酷皇帝は人質王女を溺愛中 なぜかぬいぐるみになって抱かれています</li>
+            <li>本物の聖女じゃないとばれたのに、王弟殿下に迫られています</li>
+            <li>追放された元令嬢、森で拾った皇子に溺愛され聖女に目覚める</li>
+            <li>私の上に浮かぶ『悪役令嬢(破滅する)』って何でしょうか？</li>
+        </ul>
+        <p>レジーナブックス</p>
+        <ul>
+            <li>詐騎士</li>
+            <li>チート転生者は、双子の弟でした!</li>
+            <li>訳あり魔導士は静かに暮らしたい</li>
+            <li>自称悪役令嬢な婚約者の観察日記。</li>
+            <li>転生ババァは見過ごせない! -元悪徳女帝の二週目ライフ-</li>
+            <li>婚約破棄をされた悪役令嬢は、すべてを見捨てることにした</li>
+            <li>盲目の公爵令嬢に転生しました</li>
+            <li>継母と妹に家を乗っ取られたので、魔法都市で新しい人生始めます!</li>
+            <li>『氷の悪女』は王子から婚約破棄を宣告される: その結果国家滅亡の危機だそうですが私、それどころではありません</li>
+            <li>5年も苦しんだのだから、もうすっきり幸せになってもいいですよね？</li>
+            <li>私が妊娠しているときに浮気ですって!?旦那様ご覚悟宜しいですか？</li>
             <li></li>
             <li></li>
             <li></li>
         </ul>
         <ul>
             <li>華鬼</li>
-            <li>メイデーア魔王転世紀</li>
+            <li>メイデーア魔王転生紀</li>
             <li>悪役令嬢らしく、攻略対象を服従させます 推しがダメになっていて解釈違いなんですけど!?</li>
 
         </ul>
