--- a/light/index.html
+++ b/light/index.html
@@ -132,6 +132,44 @@
             <li>『氷の悪女』は王子から婚約破棄を宣告される: その結果国家滅亡の危機だそうですが私、それどころではありません</li>
             <li>5年も苦しんだのだから、もうすっきり幸せになってもいいですよね？</li>
             <li>私が妊娠しているときに浮気ですって!?旦那様ご覚悟宜しいですか？</li>
+            <li>婚約破棄ですか。別に構いませんよ</li>
+            <li>私が死んで満足ですか?:疎まれた令嬢の死と、残された人々の破滅について</li>
+            <li>婚約者を譲れというなら譲ります。私が欲しいのはあなたの婚約者なので。</li>
+            <li>残り一日で破滅フラグ全部へし折ります:ざまぁRTA記録24Hr.</li>
+            <li>聞こえません、見えません、だから私をほっといてください。</li>
+            <li>婚約破棄からの追放とフルコースいただきましたが、隣国の王子から溺愛され甘やかされすぎてダメになりそうです。</li>
+        </ul>
+        <p>アイリス文庫</p>
+        <ul>
+            <li>第三皇子は発行ブツにつき、直視注意!</li>
+            <li>獣人隊長の(仮)婚約事情 突然で突然ですが、狼隊長の仮婚約者になりました</li>
+            <li>皇帝つき女官は花嫁として望まれ中</li>
+            <li>お狐様の異類婚姻譚</li>
+            <li>皇帝陛下の専属司書姫</li>
+            <li>災厄令嬢の不条理な事情</li>
+            <li>嵌められましたが、幸せになりました 傷物令嬢と陽だまりの魔導士</li>
+        </ul>
+        <p>電撃文庫</p>
+        <ul>
+            <li>魔法科高校の劣等生</li>
+            <li>Fate/strange Fake</li>
+            <li>ソードアート・オンライン</li>
+            <li>86-エイティシックス-</li>
+            <li>ギルドの受付嬢ですが、残業は嫌なのでボスをソロ討伐しようと思います</li>
+        </ul>
+        <p>TOブックス</p>
+        <ul>
+            <li>元公爵令嬢の就職</li>
+            <li>特級ギルドへようこそ! 看板娘の愛されエルフはみんなの心を和ませる</li>
+            <li>ヒロイン？聖女？いいえ、オールワークスメイドです(誇)!</li>
+            <li>悪役令嬢ですが攻略対象の様子が異常すぎる</li>
+            <li>運命の番？ならばその赤い糸とやら切り捨てて差し上げましょう</li>
+            <li>成り行きで婚約を申し込んだ弱気貧乏令嬢ですが、何故か次期公爵様に溺愛されて囚われています/li>
+            <li>元悪役令嬢とS級冒険者のほのぼの街暮らし~不遇なキャラに転生したけど、理想の美女になれたからプラマイゼロだよね~</li>
+            <li>恋した人は、妹の代わりに死んでくれと言った。 -妹と結婚した片思い相手がなぜ今更私のもとに?と思ったら-</li>
+            <li></li>
+            <li></li>
+            <li></li>
             <li></li>
             <li></li>
             <li></li>
